race is working fine and cars crash correctly

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game-container">
-        <div id="score-display">Position: 1/4</div>
+        <div id="score-display">Position: 1/6</div>
         <div id="controls-info">
             <p>← → : Change Lane | ↑ : Accelerate | ↓ : Brake</p>
         </div>
@@ -16,6 +16,9 @@
             <h1>RACE FINISHED</h1>
             <div id="final-score">You win!</div>
             <button id="restart-button">Race Again</button>
+        </div>
+        <div id="race-info">
+            <p>Grid Start: Cars arranged in racing grid formation</p>
         </div>
     </div>
 
